--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,10 @@ after_success:
 notifications:
   irc:
     channels:
-    - irc.freepan.net#ingy
+    - irc.freenode.net#ingy
     on_success: change
     on_failure: always
+    skip_join: true
 
 # Hack to not run on tag pushes:
 branches:
